finish setting up the defaults

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./resources/css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <!--===============Header================-->
+    <!--===============Header================-->
+    <!--===============Header================-->
+    <!--===============Header================-->
+    <!--===============Header================-->
+    <!--===============Header================-->
+    <!--===============Footer================-->
+  </body>
 </html>
