create basic structure of the footer

--- a/index.html
+++ b/index.html
@@ -15,5 +15,15 @@
     <!--===============Header================-->
     <!--===============Header================-->
     <!--===============Footer================-->
+    <div id="footer">
+      <div id="foot_container">
+        <div id="f_cont1"></div>
+        <div id="f_cont2" class="f_conts"></div>
+        <div id="f_cont3" class="f_conts"></div>
+        <div id="f_cont4" class="f_conts"></div>
+      </div>
+
+      <p>All rights reserved, terms and conditions apply.</p>
+    </div>
   </body>
 </html>
