--- a/index.html
+++ b/index.html
@@ -17,12 +17,50 @@
     <!--===============Footer================-->
     <div id="footer">
       <div id="foot_container">
-        <div id="f_cont1"></div>
-        <div id="f_cont2" class="f_conts"></div>
-        <div id="f_cont3" class="f_conts"></div>
-        <div id="f_cont4" class="f_conts"></div>
+        <div id="f_cont1">
+          <h2>AgriPlus</h2>
+          <p>Quality farm produce through buying and selling</p>
+          <div id="f_icons">
+            <div class="f_icons"></div>
+            <div class="f_icons"></div>
+            <div class="f_icons"></div>
+          </div>
+          <h3>Get the app</h3>
+          <div id="f_app">
+            <div class="f_app"></div>
+            <div class="f_app"></div>
+          </div>
+        </div>
+        <div id="f_cont2" class="f_conts">
+          <h4>Company</h4>
+          <p>
+            About
+            <br />
+            Products
+            <br />
+            Contact Us
+          </p>
+        </div>
+        <div id="f_cont3" class="f_conts">
+          <h4>Products</h4>
+          <p>
+            Dairy
+            <br />
+            Cereals
+            <br />
+            Vegetables and Fruits
+            <br />
+            More ...
+          </p>
+        </div>
+        <div id="f_cont4" class="f_conts">
+          <h4>Others</h4>
+          <p>
+            FAQs<br />Terms of Service <br />
+            Privacy Policy
+          </p>
+        </div>
       </div>
-
       <p>All rights reserved, terms and conditions apply.</p>
     </div>
   </body>
