--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
           <h2>AgriPlus</h2>
           <p>Quality farm produce through buying and selling</p>
           <div id="f_icons">
-            <div class="f_icons"></div>
-            <div class="f_icons"></div>
-            <div class="f_icons"></div>
+            <div class="f_icons">
+              <img src="./resources/icons/twitter.svg" alt="Twitter logo" />
+            </div>
+            <div class="f_icons">
+              <img src="./resources/icons/facebook.svg" alt="Facebook logo" />
+            </div>
+            <div class="f_icons">
+              <img src="./resources/icons/instagram.svg" alt="Instagram logo" />
+            </div>
           </div>
           <h3>Get the app</h3>
           <div id="f_app">
