--- a/index.html
+++ b/index.html
@@ -33,8 +33,20 @@
           </div>
           <h3>Get the app</h3>
           <div id="f_app">
-            <div class="f_app"></div>
-            <div class="f_app"></div>
+            <div class="f_app">
+              <img
+                src="./resources/icons/play_store.png"
+                alt="play store logo"
+                class="f_app1"
+              />
+            </div>
+            <div class="f_app">
+              <img
+                src="./resources/icons/applystore.png"
+                alt="Apple logo"
+                class="f_app1"
+              />
+            </div>
           </div>
         </div>
         <div id="f_cont2" class="f_conts">
