created section 1 of the footer

--- a/index.html
+++ b/index.html
@@ -15,5 +15,19 @@
     <!--===============Header================-->
     <!--===============Header================-->
     <!--===============Footer================-->
+    <footer>
+      <div id="footer1">
+        <div id="f1_cont1">
+          <div id="f1_cont1_1">
+            <h2>We'd like to keep in touch</h2>
+            <p>Subscribe to our Newsletter</p>
+          </div>
+          <div id="f1_cont1_2">
+            <div id="cont1_1">Enter your Email address</div>
+            <div id="cont1_2"><button>Subscribe</button></div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
