create level two formatting for footer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,58 @@
           </div>
         </div>
       </div>
+      <div id="footer2">
+        <div id="f2_container">
+          <div id="f2_cont1">
+            <h3>AgriPlus</h3>
+            <p>
+              Quality farm products produced through <br />
+              buying and selling
+            </p>
+            <div id="ft_icons">
+              <div class="icons">
+                <img src="./resources/icons/twitter.svg" alt="Twitter logo" />
+              </div>
+              <div class="icons">
+                <img src="./resources/icons/facebook.svg" alt="Facebook logo" />
+              </div>
+              <div class="icons">
+                <img
+                  src="./resources/icons/instagram.svg"
+                  alt="Instagram logo"
+                />
+              </div>
+            </div>
+            <h4>Get the app</h4>
+            <div id="app">
+              <div class="app"></div>
+              <div class="app"></div>
+            </div>
+          </div>
+          <div class="f2_conts" id="f2_cont2">
+            <h4>Company</h4>
+            <p>About</p>
+            <p>Product</p>
+            <p>Contact Us</p>
+          </div>
+          <div class="f2_conts" id="f2_cont3">
+            <h4>Products</h4>
+            <p>Dairy</p>
+            <p>Cereals</p>
+            <p>Vegetables and Fruits</p>
+            <p>More ...</p>
+          </div>
+          <div class="f2_conts" id="f2_cont4">
+            <h4>Others</h4>
+            <p>FAQs</p>
+            <p>Terms of Servics</p>
+            <p>Privacy Policy</p>
+          </div>
+        </div>
+        <div id="par1">
+          <p>All rights reserved terms and conditions apply.</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
