--- a/index.html
+++ b/index.html
@@ -52,8 +52,20 @@
             </div>
             <h4>Get the app</h4>
             <div id="app">
-              <div class="app"></div>
-              <div class="app"></div>
+              <div class="app">
+                <img
+                  src="./resources/icons/play_store.png"
+                  alt="Playstore badge"
+                  class="badge"
+                />
+              </div>
+              <div class="app">
+                <img
+                  src="./resources/icons/applystore.png"
+                  alt="App store badge"
+                  class="badge"
+                />
+              </div>
             </div>
           </div>
           <div class="f2_conts" id="f2_cont2">
