--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     <!--===============Header================-->
     <!--===============Header================-->
     <!--===============Header================-->
-    <!--===============Header================-->
+    <!--================Main section 6 (esteemed customers)===============-->
+    <section>
+      <div id="section6">
+        <div id="sect6_head">
+          <h3>What our esteemed customers have to say about us</h3>
+        </div>
+        <div id="sect6_cont">
+          <div class="card2"></div>
+          <div class="card2"></div>
+          <div class="card2"></div>
+        </div>
+        <div id="sect6_info">Read More</div>
+      </div>
+    </section>
     <!--===============Footer================-->
     <footer>
       <div id="footer1">
