create basic structure of section 5

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <!--===============Header================-->
     <!--===============Header================-->
     <!--===============Header================-->
-    <!--===============Header================-->
+    <!--===============Main section 5 (Newest item)================-->
+    <section>
+      <div id="section5">
+        <div id="sect5_header">Newest Item</div>
+        <div id="sect5_cont">
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+        <div id="sect5_info">See All</div>
+      </div>
+    </section>
     <!--================Main section 6 (esteemed customers)===============-->
     <section>
       <div id="section6">
