create basic structure for section 4

--- a/index.html
+++ b/index.html
@@ -11,11 +11,26 @@
     <!--===============Header================-->
     <!--===============Header================-->
     <!--===============Header================-->
-    <!--===============Header================-->
+    <!--===============Section 4 (Most popular items)================-->
+    <section>
+      <div id="section4">
+        <div id="sect5_header">
+          <h3>Most Popular</h3>
+        </div>
+        <div id="sect5_cont">
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+      </div>
+    </section>
     <!--===============Main section 5 (Newest item)================-->
     <section>
       <div id="section5">
-        <div id="sect5_header">Newest Item</div>
+        <div id="sect5_header">
+          <h3>New Items</h3>
+        </div>
         <div id="sect5_cont">
           <div class="card"></div>
           <div class="card"></div>
