craeted basic structure of section 3

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
   <body>
     <!--===============Header================-->
     <!--===============Header================-->
-    <!--===============Header================-->
+    <!--===============Main section 3(Products and categories)==============-->
+    <section>
+      <div id="section3">
+        <div><h3>Our product categories</h3></div>
+        <div>
+          <p>
+            We go beyond the borders to ensure you get fresh produce from the
+            farm our mission is customer satisfaction
+          </p>
+        </div>
+      </div>
+    </section>
     <!--===============Section 4 (Most popular items)================-->
     <section>
       <div id="section4">
