craete the basic structuer of main section 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
   </head>
   <body>
     <!--===============Header================-->
-    <!--===============Header================-->
+    <!--===============Main Section 2(existence)================-->
+    <section>
+      <div id="section2">
+        <div id="sect2_div1">
+          <div id="sect2_head"><h3>Why we exist</h3></div>
+          <div id="sect2_info">
+            <p>
+              We are built to make your work easier. Like any online ecommerce.
+              Agriplus provides a great platform for farmers to reach their
+              customers throughout the country. We have made it easier to shop
+              from anywhere through the platform.
+            </p>
+          </div>
+        </div>
+        <div id="sect2_div2"></div>
+      </div>
+    </section>
     <!--===============Main section 3(Products and categories)==============-->
     <section>
       <div id="section3">
