--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
     <link rel="stylesheet" href="./resources/css/index.css" />
   </head>
   <body>
-    <!--===============Header================-->
+    <!--===============Main section 1(intro)================-->
+    <section>
+      <div id="section1">
+        <div id="sect1_cont">
+          <div id="sect1_header">
+            <h1>
+              Buying and selling quality
+              <br />
+              farm produce has never
+              <br />
+              been easier
+            </h1>
+          </div>
+          <div id="sect1_par1">
+            <p>
+              Agriplus is here to have you sorted, you can order farm produce
+              from the farmers harvesters and producers directly
+            </p>
+          </div>
+          <div id="sect1_info">
+            <button>Explore More</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--===============Main Section 2(existence)================-->
     <section>
       <div id="section2">
