--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
   <body>
     <!--===============Main section 1(intro)================-->
     <section>
+      <div id="header">
+        <div id="logo"></div>
+        <div id="head_info">
+          <div class="h_info">Home</div>
+          <div class="h_info">About</div>
+          <div class="h_info">Products</div>
+          <div class="h_info">Contact Us</div>
+        </div>
+        <div id="head_cred"></div>
+      </div>
+    </section>
+    <!--===============Main section 1(intro)================-->
+    <section>
       <div id="section1">
         <div id="sect1_cont">
           <div id="sect1_header">
