--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <!--===============Main section 1(intro)================-->
     <section>
       <div id="header">
-        <div id="logo"></div>
+        <div id="logo">
+          <h1>AgriPlus</h1>
+        </div>
         <div id="head_info">
           <div class="h_info">Home</div>
           <div class="h_info">About</div>
           <div class="h_info">Products</div>
           <div class="h_info">Contact Us</div>
         </div>
-        <div id="head_cred"></div>
+        <div id="head_cred">
+          <div id="head_b1" class="head_bt"><button>Login</button></div>
+          <div id="head_b2" class="head_bt"><button>Get Started</button></div>
+        </div>
       </div>
     </section>
     <!--===============Main section 1(intro)================-->
