--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./resources/css/index.css" />
   </head>
   <body>
     <!--===============Main section 1(intro)================-->
-    <section>
+    <header>
       <div id="header">
         <div id="logo">
           <h1>AgriPlus</h1>
@@ -25,7 +31,7 @@
           <div id="head_b2" class="head_bt"><button>Get Started</button></div>
         </div>
       </div>
-    </section>
+    </header>
     <!--===============Main section 1(intro)================-->
     <section>
       <div id="section1">
