--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
               <br />
               farm produce has never
               <br />
-              been easier
+              been easier.
             </h1>
           </div>
           <div id="sect1_par1">
             <p>
               Agriplus is here to have you sorted, you can order farm produce
-              from the farmers harvesters and producers directly
+              from the farmers harvesters and producers directly.
             </p>
           </div>
           <div id="sect1_info">
