final styling for main section 2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     <section>
       <div id="section2">
         <div id="sect2_div1">
-          <div id="sect2_head"><h3>Why we exist</h3></div>
+          <div id="sect2_head">
+            <h3><strong>Why w</strong>e exist</h3>
+          </div>
           <div id="sect2_info">
             <p>
               We are built to make your work easier. Like any online ecommerce.
