add final styling main section 3

--- a/index.html
+++ b/index.html
@@ -59,36 +59,38 @@
     </div>
 
     <!--===============Main Section 2(existence)================-->
-    <section>
-      <div id="section2">
-        <div id="sect2_div1">
-          <div id="sect2_head">
-            <h3><strong>Why w</strong>e exist</h3>
-          </div>
-          <div id="sect2_info">
-            <p>
-              We are built to make your work easier. Like any online ecommerce.
-              Agriplus provides a great platform for farmers to reach their
-              customers throughout the country. We have made it easier to shop
-              from anywhere through the platform.
-            </p>
-          </div>
+
+    <div id="section2">
+      <div id="sect2_div1">
+        <div id="sect2_head">
+          <h3><strong>Why w</strong>e exist</h3>
         </div>
-        <div id="sect2_div2"></div>
-      </div>
-    </section>
-    <!--===============Main section 3(Products and categories)==============-->
-    <section>
-      <div id="section3">
-        <div><h3>Our product categories</h3></div>
-        <div>
+        <div id="sect2_info">
           <p>
-            We go beyond the borders to ensure you get fresh produce from the
-            farm our mission is customer satisfaction
+            We are built to make your work easier. Like any online ecommerce.
+            Agriplus provides a great platform for farmers to reach their
+            customers throughout the country. We have made it easier to shop
+            from anywhere through the platform.
           </p>
         </div>
       </div>
-    </section>
+      <div id="sect2_div2"></div>
+    </div>
+
+    <!--===============Main section 3(Products and categories)==============-->
+
+    <div id="section3">
+      <div>
+        <h3>Our Cate<strong>gories</strong> of products</h3>
+      </div>
+      <div>
+        <p>
+          We go beyond the borders to ensure you get fresh produce from the farm
+          our mission is customer satisfaction
+        </p>
+      </div>
+    </div>
+
     <!--===============Section 4 (Most popular items)================-->
     <section>
       <div id="section4">
