add final styling and images to section 4

--- a/index.html
+++ b/index.html
@@ -92,66 +92,90 @@
     </div>
 
     <!--===============Section 4 (Most popular items)================-->
-    <section>
-      <div id="section4">
-        <div id="sect5_header">
-          <h3><strong>Most P</strong>opular</h3>
+
+    <div id="section4">
+      <div id="sect5_header">
+        <h3><strong>Most P</strong>opular</h3>
+      </div>
+      <div id="sect5_cont">
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="./resources/Assets/rectangle_5.png"
+              alt="Carrots"
+              class="image_card1"
+            />
+          </div>
+          <div class="card_head">
+            <h4>Fresh Carrots</h4>
+          </div>
+          <div class="card_par1">
+            <p>Kinyanjui Frarmers Association</p>
+          </div>
+          <div class="card_par2">
+            <p>Ksh. 200/kg</p>
+          </div>
         </div>
-        <div id="sect5_cont">
-          <div class="card">
-            <div class="card_img"></div>
-            <div class="card_head">
-              <h4>Fresh Carrots</h4>
-            </div>
-            <div class="card_par1">
-              <p>Kinyanjui Frarmers Association</p>
-            </div>
-            <div class="card_par2">
-              <p>Ksh. 200/kg</p>
-            </div>
-          </div>
 
-          <div class="card">
-            <div class="card_img"></div>
-            <div class="card_head">
-              <h4>Cereals</h4>
-            </div>
-            <div class="card_par1">
-              <p>Kenya Cereals Board</p>
-            </div>
-            <div class="card_par2">
-              <p>Ksh. 5000/bag</p>
-            </div>
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="./resources/Assets/image_4.png"
+              alt="Cereals"
+              class="image_card1"
+            />
           </div>
-
-          <div class="card">
-            <div class="card_img"></div>
-            <div class="card_head">
-              <h4>Fresh Fish/Tilapia</h4>
-            </div>
-            <div class="card_par1">
-              <p>Mr. Otieno</p>
-            </div>
-            <div class="card_par2">
-              <p>Ksh. 500/kg</p>
-            </div>
+          <div class="card_head">
+            <h4>Cereals</h4>
           </div>
+          <div class="card_par1">
+            <p>Kenya Cereals Board</p>
+          </div>
+          <div class="card_par2">
+            <p>Ksh. 5000/bag</p>
+          </div>
+        </div>
 
-          <div class="card">
-            <div class="card_img"></div>
-            <div class="card_head">
-              <h4>Kales/Sukuma Wiki</h4>
-            </div>
-            <div class="card_par1">
-              <p>Njokis Farm</p>
-            </div>
-            <div class="card_par2">
-              <p>Ksh. 50/bunch</p>
-            </div>
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="./resources/Assets/image_5.png"
+              alt="Tilapia"
+              class="image_card1"
+            />
+          </div>
+          <div class="card_head">
+            <h4>Fresh Fish/Tilapia</h4>
+          </div>
+          <div class="card_par1">
+            <p>Mr. Otieno</p>
+          </div>
+          <div class="card_par2">
+            <p>Ksh. 500/kg</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="./resources/Assets/image_6.png"
+              alt="Kales"
+              class="image_card1"
+            />
+          </div>
+          <div class="card_head">
+            <h4>Kales/Sukuma Wiki</h4>
+          </div>
+          <div class="card_par1">
+            <p>Njokis Farm</p>
+          </div>
+          <div class="card_par2">
+            <p>Ksh. 50/bunch</p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+
     <!--===============Main section 5 (Newest item)================-->
     <section>
       <div id="section5">
