create basic structure of main section 6

--- a/index.html
+++ b/index.html
@@ -33,236 +33,236 @@
       </div>
     </header>
     <!--===============Main section 1(intro)================-->
-
-    <div id="section1">
-      <div id="sect1_cont">
-        <div id="sect1_header">
-          <h1>
-            Buying and selling quality
-            <br />
-            farm produce has never
-            <br />
-            been easier.
-          </h1>
+    <main>
+      <div id="section1">
+        <div id="sect1_cont">
+          <div id="sect1_header">
+            <h1>
+              Buying and selling quality
+              <br />
+              farm produce has never
+              <br />
+              been easier.
+            </h1>
+          </div>
+          <div id="sect1_par1">
+            <p>
+              Agriplus is here to have you sorted, you can order farm produce
+              from the farmers harvesters and producers directly.
+            </p>
+          </div>
+          <div id="sect1_info">
+            <button>Explore More</button>
+          </div>
         </div>
-        <div id="sect1_par1">
+        <div id="sect1_img"></div>
+      </div>
+
+      <!--===============Main Section 2(existence)================-->
+
+      <div id="section2">
+        <div id="sect2_div1">
+          <div id="sect2_head">
+            <h3><strong>Why w</strong>e exist</h3>
+          </div>
+          <div id="sect2_info">
+            <p>
+              We are built to make your work easier. Like any online ecommerce.
+              Agriplus provides a great platform for farmers to reach their
+              customers throughout the country. We have made it easier to shop
+              from anywhere through the platform.
+            </p>
+          </div>
+        </div>
+        <div id="sect2_div2"></div>
+      </div>
+
+      <!--===============Main section 3(Products and categories)==============-->
+
+      <div id="section3">
+        <div>
+          <h3>Our Cate<strong>gories</strong> of products</h3>
+        </div>
+        <div>
           <p>
-            Agriplus is here to have you sorted, you can order farm produce from
-            the farmers harvesters and producers directly.
+            We go beyond the borders to ensure you get fresh produce from the
+            farm our mission is customer satisfaction
           </p>
         </div>
-        <div id="sect1_info">
-          <button>Explore More</button>
-        </div>
       </div>
-      <div id="sect1_img"></div>
-    </div>
 
-    <!--===============Main Section 2(existence)================-->
+      <!--===============Section 4 (Most popular items)================-->
 
-    <div id="section2">
-      <div id="sect2_div1">
-        <div id="sect2_head">
-          <h3><strong>Why w</strong>e exist</h3>
+      <div id="section4">
+        <div id="sect5_header">
+          <h3><strong>Most P</strong>opular</h3>
         </div>
-        <div id="sect2_info">
-          <p>
-            We are built to make your work easier. Like any online ecommerce.
-            Agriplus provides a great platform for farmers to reach their
-            customers throughout the country. We have made it easier to shop
-            from anywhere through the platform.
-          </p>
-        </div>
-      </div>
-      <div id="sect2_div2"></div>
-    </div>
+        <div id="sect5_cont">
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/rectangle_5.png"
+                alt="Carrots"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Fresh Carrots</h4>
+            </div>
+            <div class="card_par1">
+              <p>Kinyanjui Farmers Association</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 200/kg</p>
+            </div>
+          </div>
 
-    <!--===============Main section 3(Products and categories)==============-->
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/image_4.png"
+                alt="Cereals"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Cereals</h4>
+            </div>
+            <div class="card_par1">
+              <p>Kenya Cereals Board</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 5000/bag</p>
+            </div>
+          </div>
 
-    <div id="section3">
-      <div>
-        <h3>Our Cate<strong>gories</strong> of products</h3>
-      </div>
-      <div>
-        <p>
-          We go beyond the borders to ensure you get fresh produce from the farm
-          our mission is customer satisfaction
-        </p>
-      </div>
-    </div>
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/image_5.png"
+                alt="Tilapia"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Fresh Fish/Tilapia</h4>
+            </div>
+            <div class="card_par1">
+              <p>Mr. Otieno</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 500/kg</p>
+            </div>
+          </div>
 
-    <!--===============Section 4 (Most popular items)================-->
-
-    <div id="section4">
-      <div id="sect5_header">
-        <h3><strong>Most P</strong>opular</h3>
-      </div>
-      <div id="sect5_cont">
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/rectangle_5.png"
-              alt="Carrots"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Fresh Carrots</h4>
-          </div>
-          <div class="card_par1">
-            <p>Kinyanjui Farmers Association</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 200/kg</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/image_4.png"
-              alt="Cereals"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Cereals</h4>
-          </div>
-          <div class="card_par1">
-            <p>Kenya Cereals Board</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 5000/bag</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/image_5.png"
-              alt="Tilapia"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Fresh Fish/Tilapia</h4>
-          </div>
-          <div class="card_par1">
-            <p>Mr. Otieno</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 500/kg</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/image_6.png"
-              alt="Kales"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Kales/Sukuma Wiki</h4>
-          </div>
-          <div class="card_par1">
-            <p>Njokis Farm</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 50/bunch</p>
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/image_6.png"
+                alt="Kales"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Kales/Sukuma Wiki</h4>
+            </div>
+            <div class="card_par1">
+              <p>Njokis Farm</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 50/bunch</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!--===============Main section 5 (Newest item)================-->
+      <!--===============Main section 5 (Newest item)================-->
 
-    <div id="section5">
-      <div id="sect5_header">
-        <h3><strong>New</strong>est Items</h3>
+      <div id="section5">
+        <div id="sect5_header">
+          <h3><strong>New</strong>est Items</h3>
+        </div>
+
+        <div id="sect5_cont">
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/rectangle_6.png"
+                alt="Chicken"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Chicken</h4>
+            </div>
+            <div class="card_par1">
+              <p>Wafula Farm</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 700</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/rectangle_7.png"
+                alt="Ahero rice"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Ahero/lr Rice</h4>
+            </div>
+            <div class="card_par1">
+              <p>Ahero Irrigation Board</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 200/kg</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/rectangle_8.png"
+                alt="Mursik"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Mursik</h4>
+            </div>
+            <div class="card_par1">
+              <p>Korir Dairy Farm</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 200/kg</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card_img">
+              <img
+                src="./resources/Assets/rectangle_9.png"
+                alt="Tomatoes"
+                class="image_card1"
+              />
+            </div>
+            <div class="card_head">
+              <h4>Fresh Tomatoes</h4>
+            </div>
+            <div class="card_par1">
+              <p>TZ Farmers Association</p>
+            </div>
+            <div class="card_par2">
+              <p>Ksh. 5000/Crate</p>
+            </div>
+          </div>
+        </div>
+        <div id="sect5_info">See All</div>
       </div>
-
-      <div id="sect5_cont">
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/rectangle_6.png"
-              alt="Chicken"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Chicken</h4>
-          </div>
-          <div class="card_par1">
-            <p>Wafula Farm</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 700</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/rectangle_7.png"
-              alt="Ahero rice"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Ahero/lr Rice</h4>
-          </div>
-          <div class="card_par1">
-            <p>Ahero Irrigation Board</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 200/kg</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/rectangle_8.png"
-              alt="Mursik"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Mursik</h4>
-          </div>
-          <div class="card_par1">
-            <p>Korir Dairy Farm</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 200/kg</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card_img">
-            <img
-              src="./resources/Assets/rectangle_9.png"
-              alt="Tomatoes"
-              class="image_card1"
-            />
-          </div>
-          <div class="card_head">
-            <h4>Fresh Tomatoes</h4>
-          </div>
-          <div class="card_par1">
-            <p>TZ Farmers Association</p>
-          </div>
-          <div class="card_par2">
-            <p>Ksh. 5000/Crate</p>
-          </div>
-        </div>
-      </div>
-      <div id="sect5_info">See All</div>
-    </div>
-
+    </main>
     <!--================Main section 6 (esteemed customers)===============-->
     <section>
       <div id="section6">
@@ -270,9 +270,32 @@
           <h3>What our esteemed customers have to say about us</h3>
         </div>
         <div id="sect6_cont">
-          <div class="card2"></div>
-          <div class="card2"></div>
-          <div class="card2"></div>
+          <div class="card2">
+            <div id="rating"></div>
+            <div id="opinion"></div>
+            <div id="card2_info">
+              <div id="c2info_img"></div>
+              <div id="c2info_name"></div>
+            </div>
+          </div>
+
+          <div class="card2">
+            <div id="rating"></div>
+            <div id="opinion"></div>
+            <div id="card2_info">
+              <div id="c2info_img"></div>
+              <div id="c2info_name"></div>
+            </div>
+          </div>
+
+          <div class="card2">
+            <div id="rating"></div>
+            <div id="opinion"></div>
+            <div id="card2_info">
+              <div id="c2info_img"></div>
+              <div id="c2info_name"></div>
+            </div>
+          </div>
         </div>
         <div id="sect6_info">Read More</div>
       </div>
