create level two structure with wording main section 6

--- a/index.html
+++ b/index.html
@@ -271,29 +271,39 @@
         </div>
         <div id="sect6_cont">
           <div class="card2">
-            <div id="rating"></div>
-            <div id="opinion"></div>
-            <div id="card2_info">
-              <div id="c2info_img"></div>
-              <div id="c2info_name"></div>
+            <div class="rating"></div>
+            <div class="opinion">
+              <p>"The most efficient way to get fresh produce"</p>
+            </div>
+            <div class="card2_info">
+              <div class="c2info_img"></div>
+              <div class="c2info_name">Rebecca Mkulima</div>
             </div>
           </div>
 
           <div class="card2">
-            <div id="rating"></div>
-            <div id="opinion"></div>
-            <div id="card2_info">
-              <div id="c2info_img"></div>
-              <div id="c2info_name"></div>
+            <div class="rating"></div>
+            <div class="opinion">
+              <p>"The most efficient way to get fresh produce"</p>
+            </div>
+            <div class="card2_info">
+              <div class="c2info_img"></div>
+              <div class="c2info_name">
+                <p>John Joe</p>
+              </div>
             </div>
           </div>
 
           <div class="card2">
-            <div id="rating"></div>
-            <div id="opinion"></div>
-            <div id="card2_info">
-              <div id="c2info_img"></div>
-              <div id="c2info_name"></div>
+            <div class="rating"></div>
+            <div class="opinion">
+              <p>"The most efficient way to get fresh produce"</p>
+            </div>
+            <div class="card2_info">
+              <div class="c2info_img"></div>
+              <div class="c2info_name">
+                <p>Lavingtone Dwellers</p>
+              </div>
             </div>
           </div>
         </div>
