add stars in folder

--- a/index.html
+++ b/index.html
@@ -271,7 +271,15 @@
         </div>
         <div id="sect6_cont">
           <div class="card2">
-            <div class="rating"></div>
+            <div class="rating">
+              <div class="star">
+                <img src="./resources/icons/star.png" alt="" />
+              </div>
+              <div class="star"></div>
+              <div class="star"></div>
+              <div class="star"></div>
+              <div class="star"></div>
+            </div>
             <div class="opinion">
               <p>"The most efficient way to get fresh produce"</p>
             </div>
